@@ -1,3 +1,9 @@
+2010-02-01  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* capplet/nwam_vpn_pref_dialog.c (nwam_vpn_selection_changed):
+	Fixed 14261 [132] nwam VPN when Editing start/stop rules SMF
+	service is unselected
+
 2010-01-29  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* common/nwamui_ncp.c (nwamui_ncp_init), (nwamui_ncp_get_property),
